fixed a bug where the nav menu disapearse behind the nav when it opens

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -135,7 +135,7 @@ img {
 }
 
 .nav__open {
-  z-index: 999;
+  z-index: 2000;
   width: 2.4rem;
   height: 2.1rem;
   display: flex;
